just create about page

--- a/index (1).html
+++ b/index (1).html
@@ -56,7 +56,9 @@ color: white;
 
             <ul>
                 <li>Home</li>
-                <li>About</li>
+                <li>
+                    <a href="about.html"> About </a>
+                   </li>
                 <li>Services</li>
                 <li>Portfolio</li>
                 <li>News</li>
