--- a/index (1).html
+++ b/index (1).html
@@ -30,7 +30,7 @@ margin-top: 3rem;
         }
         .content ul li{
 padding: 10px;
-color: white;
+color: black;
         }
       .right{
         height: 100vh;
@@ -61,7 +61,7 @@ color: white;
         <div class="content">
 
             <ul>
-                <li>Home</li>
+                <li>home</li>
                 <li>
                     <!-- <a href="about.html"> About </a> -->
                     About
