--- a/Js/window.html
+++ b/Js/window.html
@@ -1,3 +1,5 @@
+/* In this code we create a button when we click on that button a new window of width=400 and height=400 will be open . */
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
