--- a/cal.html
+++ b/cal.html
@@ -1,3 +1,5 @@
+/*With the help of this html code we have create a calculator and design it with the help of external CSS and make it workable with the help of javascript. */
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
