--- a/hover.html
+++ b/hover.html
@@ -1,3 +1,5 @@
+/* In this we use hover selector. Hover selector is used to select elements when you mouse over them.*/
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
