--- a/Practice.html
+++ b/Practice.html
@@ -7,25 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <!-- <h1>Hello</h1>
     <button onclick="ab(8)">Try</button> 
      <script>
         function ab(number){
             alert(number*number);
         }
-        </script>
+        </script> -->
 
-<!--    <h1> count the paragraph</h1>
+   <h1> count the paragraph</h1>
         <p>My name is Akanksha</p>
         <p>I am from Gwalior</p>
-        <p>Vaishnavi is my besstie</p>
-        <p>I am very dramebaz ☻</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea debitis unde cupiditate similique voluptatem distinctio iste est alias minus voluptate quia, excepturi ratione quasi exercitationem asperiores eos laborum! Itaque, iste.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis officia assumenda harum amet nihil vero molestiae quidem blanditiis autem id.</p>
         <button onclick="ab()">click</button>
         <script>
             function ab(){
-               console.count(p);
-               alert("p");
+              var a=getElementByTagname("p");
+              alert("no. of parah:"+a.length);
             }
-        </script> -->
+        </script>
 </body>
 </html>
