--- a/Resume.html
+++ b/Resume.html
@@ -51,7 +51,7 @@
    <tr>
     <td>B.SC.(CS)</td>
     <td>Jul 22</td>
-    <td>Govt. K.R.G.Autonomous college, Gwalior</td>
+    <td>Govt. K.R.G.Autonomous college, Gwalior(M.P.)</td>
     <td>69.09%</td>
    </tr>
    <tr>
